gccida/g2/expand_builtin_extract_return_addr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_extract_return_addr/src/except.c:3723:39: error: use of undeclared identifier 'machine_mode'
return expand_expr( addr_tree, 0LL, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), EXPAND_NORMAL); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_builtin_extract_return_addr/src/obj/except.o] Error 1
